# Lyra

./: .gitignore  .gitmodules
APP/Lyra/: .gitignore  CMakeLists.txt  DSP_BUDGET_GUIDE.md  PLAN_F8_NETWORK.md  README.md  SDMMC.md  TODO.md  partitions.csv  partitions_lyra.csv  sdkconfig  sdkconfig.defaults
APP/Lyra/.claude/: settings.local.json
APP/Lyra/components/audio_codecs/: CMakeLists.txt  audio_codecs.c  audio_codecs_internal.h  codec_aac.c  codec_alac.cpp  codec_dsd.c  codec_flac.c  codec_mp3.c  codec_opus.c  codec_wav.c  m4a_demuxer.c  m4a_demuxer.h
APP/Lyra/components/audio_codecs/include/: audio_codecs.h
APP/Lyra/components/audio_pipeline/: CMakeLists.txt  audio_pipeline.c  dsp_biquad.c  dsp_chain.c  dsp_presets.c  idf_component.yml
APP/Lyra/components/audio_pipeline/include/: audio_pipeline.h  dsp_biquad.h  dsp_chain.h  dsp_presets.h  dsp_types.h
APP/Lyra/components/display/: display.c
APP/Lyra/components/display/include/: display.h
APP/Lyra/components/dlna/: CMakeLists.txt  dlna.c
APP/Lyra/components/dlna/include/: dlna.h
APP/Lyra/components/input/: input.c
APP/Lyra/components/input/include/: input.h
APP/Lyra/components/lastfm/: CMakeLists.txt  lastfm.c
APP/Lyra/components/lastfm/include/: lastfm.h
APP/Lyra/components/metadata/: CMakeLists.txt  metadata.c
APP/Lyra/components/metadata/include/: metadata.h
APP/Lyra/components/net_audio/: CMakeLists.txt  http_stream.c  http_stream.h  net_audio.c
APP/Lyra/components/net_audio/include/: net_audio.h
APP/Lyra/components/ota/: CMakeLists.txt  ota.c
APP/Lyra/components/ota/include/: ota.h
APP/Lyra/components/power/: CMakeLists.txt  max77972.c  max77972_regs.h  power.c
APP/Lyra/components/power/include/: max77972.h  power.h
APP/Lyra/components/queue_manager/: CMakeLists.txt  queue_manager.c
APP/Lyra/components/queue_manager/include/: queue_manager.h
APP/Lyra/components/sd_player/: CMakeLists.txt  cue_parser.c  sd_player.c  sd_playlist.c
APP/Lyra/components/sd_player/include/: cue_parser.h  sd_player.h
APP/Lyra/components/sensors/: sensors.c
APP/Lyra/components/sensors/include/: sensors.h
APP/Lyra/components/settings/: CMakeLists.txt  settings_store.c
APP/Lyra/components/settings/include/: settings_store.h
APP/Lyra/components/spotify/: CMakeLists.txt  idf_component.yml  spotify.c  spotify_glue.cpp
APP/Lyra/components/spotify/include/: spotify.h
APP/Lyra/components/storage/: CMakeLists.txt  sd_card.c  storage.c
APP/Lyra/components/storage/include/: storage.h
APP/Lyra/components/subsonic/: CMakeLists.txt  subsonic.c
APP/Lyra/components/subsonic/include/: subsonic.h
APP/Lyra/components/tinyusb/: CMakeLists.txt
APP/Lyra/components/ui/: CMakeLists.txt  ui.c  ui_about.c  ui_browser.c  ui_eq.c  ui_init.c  ui_internal.h  ui_lock.c  ui_net_audio.c  ui_now_playing.c  ui_qobuz.c  ui_queue.c  ui_settings.c  ui_subsonic.c  ui_theme.c  ui_toast.c  ui_usb_dac.c  ui_wifi.c
APP/Lyra/components/ui/include/: ui.h  ui_data.h
APP/Lyra/components/usb_device/: usb_device.c
APP/Lyra/components/usb_device/include/: usb_device.h
APP/Lyra/components/wireless/: CMakeLists.txt  idf_component.yml  wireless.c
APP/Lyra/components/wireless/include/: wireless.h
APP/Lyra/main/: CMakeLists.txt  app_main.c  audio_source.c  audio_source.h  idf_component.yml  tusb_config.h  usb_cdc_vfs.c  usb_cdc_vfs.h  usb_descriptors.c  usb_descriptors.h  usb_mode.c  usb_mode.h  usb_msc.c
APP/Lyra/simulator/: CMakeLists.txt  hal_stubs.h  lv_conf.h  sim_main.c  ui_data_mock.c
APP/Lyra/simulator/build2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  lyra_sim.slnx  lyra_sim.vcxproj  lyra_sim.vcxproj.filters
APP/Lyra/simulator/build2/Debug/: lyra_sim.exp  lyra_sim.lib
APP/Lyra/simulator/build2/Release/: lyra_sim.exp  lyra_sim.lib
APP/Lyra/simulator/build2/lib/Debug/: lvgl_thorvg.lib
APP/Lyra/simulator/build2/lib/Release/: lvgl.lib
APP/Lyra/simulator/build2/lyra_sim.dir/Debug/: lyra_sim.exe.recipe  lyra_sim.ilk
APP/Lyra/simulator/build2/lyra_sim.dir/Debug/lyra_sim.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  lyra_sim.lastbuildstate
APP/Lyra/simulator/build2/lyra_sim.dir/Release/: lyra_sim.exe.recipe
APP/Lyra/simulator/build2/lyra_sim.dir/Release/lyra_sim.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  lyra_sim.lastbuildstate
APP/Lyra/simulator/build2/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
APP/Lyra/simulator/build2/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog
APP/Lyra/slave/: sdkconfig  sdkconfig.defaults.esp32c2
APP/Lyra/slave/main/: Kconfig.projbuild  esp_hosted_coprocessor.c  esp_hosted_coprocessor_fw_ver.h  sdio_slave_api.c  slave_bt.h  slave_control.c  stats.c
APP/Lyra/slave/main/common/proto/: esp_hosted_rpc.pb-c.c  esp_hosted_rpc.pb-c.h  esp_hosted_rpc.proto
APP/Lyra/slave/main/common/utils/: esp_hosted_cli.c
APP/hello_world/main/: CMakeLists.txt  hello_world_main.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
